--- a/manifest.plist
+++ b/manifest.plist
@@ -11,31 +11,31 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://www.example.com/apps/app_name.ipa</string>
+                    <string>http://doc.maipu.com/ios/StatementOfAccount.ipa</string>
                 </dict>
                 <dict>
                     <key>kind</key>
                     <string>display-image</string>
                     <key>url</key>
-                    <string>https://www.example.com/image.57×57.png</string>
+                    <string>http://doc.maipu.com/ios/CBook57.png</string>
                 </dict>
                 <dict>
                     <key>kind</key>
                     <string>full-size-image</string>
                     <key>url</key>
-                    <string>https://www.example.com/image.512×512.png</string>
+                    <string>http://doc.maipu.com/ios/CBook512.png</string>
                 </dict>
             </array>
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>com.domainname.appname</string>
+                <string>com.xnjz.StatementOfAccount</string>
                 <key>bundle-version</key>
-                <string>1.0.0</string>
+                <string>13.2</string>
                 <key>kind</key>
-                <string>software</string>
+                <string>出图</string>
                 <key>title</key>
-                <string>app_name</string>
+                <string>出图</string>
             </dict>
         </dict>
     </array>
